--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" />
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+    </style>
+
     <title>Landing Page</title>
 </head>
+
 <body>
-    
+    <div class="heroContainer">
+        <div class="navContainer">
+            <ul class="navList">
+                <li class="navLogo">Header Logo</li>
+                <div class="navLinkDiv">
+                    <li class="navLink"><a href="#">header link one</a></li>
+                    <li class="navLink"><a href="#">header link two</a></li>
+                    <li class="navLink"><a href="#">header link three</a></li>
+                </div>
+            </ul>
+        </div>
+    </div>
+    <div class="heroContainer2">
+        <div class="heroContent">
+            <h1>This Website is Awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        </div>
+    </div>
 </body>
+
 </html>
