--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
     </div>
     <div class="heroContainer2">
         <div class="heroContent">
-            <h1>This Website is Awesome</h1>
+            <h1>This Website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="heroImg">
+            <img src="" alt="Text for the Hero Image">
         </div>
     </div>
 </body>
