--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
             <img src="" alt="Text for the Hero Image">
         </div>
     </div>
+
+    <div class="mainCont">
+        <h1>Some random Information.</h1>
+        <div class="boxDiv">
+            <div class="box"><p>this is some subtext under an illustration or image</p></div>
+            <div class="box"><p>this is some subtext under an illustration or image</p></div>
+            <div class="box"><p>this is some subtext under an illustration or image</p></div>
+            <div class="box"><p>this is some subtext under an illustration or image</p></div>
+        </div>
+
+    </div>
 </body>
 
 </html>
