--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             <div class="box"><p>this is some subtext under an illustration or image</p></div>
             <div class="box"><p>this is some subtext under an illustration or image</p></div>
         </div>
+    </div>
 
+    <div class="quoteCont">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="quoteAuthor">-Thor, God of Thunder</p>
     </div>
 </body>
 
