--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="quoteAuthor">-Thor, God of Thunder</p>
     </div>
+
+    <div class="bannerCont">
+        <div class="callBanner">
+            <div>
+                <p class="callHeader">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <div>
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
