Added footer section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>Copyright &copy; The Odin Project - By Tanveer</p>
+    </footer>
 </body>
 
 </html>
